# ppgso-dynablaster3d

./: .gitignore  CMakeLists.txt
_install/objects/: block.mtl  bomb.blend  bomb.mtl  enemy.blend  enemy.mtl  fire.mtl  menu.blend  menu.mtl
resources/objects/: block.blend  cursor.blend  fire.blend  wall.blend  wall.mtl
src/: camera.cpp  camera.h  main.cpp  player.cpp  player.h  scene.h
src/common/: camera.cpp  camera.h  game.cpp  game.h  level.cpp  level.h  menu.cpp  menu.h  movement.cpp  movement.h  scene.cpp  scene.h  scenewindow.cpp  scenewindow.h  shadow.cpp  shadow.h  weather.cpp  weather.h
src/objects/: block.cpp  block.h  bomb.cpp  bomb.h  enemy.cpp  enemy.h  fire.cpp  fire.h  object.h  plane.cpp  plane.h  player.cpp  player.h  powerup.cpp  powerup.h
